API 279 r4 fix capability (#53)
* Fix Capability List of Strings with @Pattern constraints

* 3.0.0 Breaking changes to R4 Capability
- Renames to `CapabilityStatement`
- Fixes `@Pattern` constraints incorrectly applied to `List<String>`
- Changed string r4 data types with pattern restrictions for boolean and numbers, in to numbers.